Fix letter-spacing issue

--- a/src/scss/customize/header-style-wide.scss
+++ b/src/scss/customize/header-style-wide.scss
@@ -32,6 +32,7 @@
 
 .wide-header-identity {
   flex: 0 1 auto;
+  letter-spacing: 0;
   margin-right: 1.5rem;
 
   &:not(._no-text-shadow) {
